--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@apeswapfinance/sdk",
+  "name": "@boggieswap-libs/sdk",
   "license": "MIT",
   "version": "1.0.4",
-  "description": "🛠 An SDK for building applications on top of apeswap.",
+  "description": "🛠 An SDK for building applications on top of boggieswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/ApeSwapFinance/apeswap-sdk",
+  "repository": "https://github.com/boggieswap/boggieswap-sdk",
   "keywords": [
-    "pancakeswap",
+    "boggieswap",
     "ethereum"
   ],
   "module": "dist/sdk.esm.js",
